# resume

./: .drone.yml  .gitignore  .pre-commit-config.yaml  generate.py  go.mod  go.sum  go.work  main.go  pyproject.toml  schema.json
.github/workflows/: main.yml
handmade/: template.html  template.txt.go.j2  template.txt.j2
pkg/: go.mod
pkg/cmd/: decrypt.go  encrypt.go  generate.go  root.go
pkg/crypt/: crypt.go
pkg/files/: files.go
pkg/marshall/: marshall.go  render.go
pkg/shared/: version.go
pkg/themes/: themes.go
pkg/themes/templates/handmade/: macros.j2  template.html.j2  template.txt.j2
resume/: go.mod  main.go
resume/cmd/: decrypt.go  encrypt.go  generate.go
resume/crypt/: crypt.go
resume/marshall/: marshall.go
themes/handmade/: template.html.go.j2  template.html.j2  template.txt.go.j2  template.txt.j2
tool/: go.sum  main.go
tool/cmd/: decrypt.go  encrypt.go  generate.go  root.go
tool/files/: files.go
tool/marshall/: marshall_test.go  render.go
tool/shared/: shared.go
