[tool.black]
line-length = 100

[tool.isort]
line_length = 100
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.'FORMAT']
max-line-length=100

[tool.poetry]
name = "resume"
version = "1.0.0"
description = "My own resume data"
authors = ["Brendan Cazier <admin@brendancazier.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.2"
Jinja2 = "^3.1.2"
typer = "^0.4.1"
playwright = "^1.21.0"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pre-commit = "^2.18.1"
mypy = "^0.950"
pylint = "^2.13.8"
nest-asyncio = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
